# Expression-Tree

./: CMakeLists.txt  README.md
include/: refcounter.h
include/commands/: command.h  command_factory.h  command_impl.h  eval.h  expr.h  format.h  get.h  history.h  list.h  macro.h  null.h  print.h  quit.h  set.h
include/core/: context.h  event_handler.h  getopt.h  options.h  reactor.h  state.h
include/interpreter/: interpreter.h  symbol.h  variable_map.h
include/tree/: add_node.h  binary_node.h  ceiling_node.h  component_node.h  divide_node.h  exponent_node.h  expression_tree.h  expression_tree_iterator.h  expression_tree_iterator_impl.h  factorial_node.h  floor_node.h  leaf_node.h  modulus_node.h  multiply_node.h  negate_node.h  subtract_node.h  unary_node.h
include/visitors/: evaluation.h  print.h  visitor.h
src/: main.cpp  refcounter.cpp
src/commands/: CMakeLists.txt  command.cpp  command_factory.cpp  command_impl.cpp  eval.cpp  expr.cpp  format.cpp  get.cpp  history.cpp  list.cpp  macro.cpp  null.cpp  print.cpp  quit.cpp  set.cpp
src/core/: CMakeLists.txt  context.cpp  event_handler.cpp  getopt.cpp  options.cpp  reactor.cpp  state.cpp
src/interpreter/: CMakeLists.txt  interpreter.cpp  symbol.cpp  variable_map.cpp
src/tree/: CMakeLists.txt  add_node.cpp  binary_node.cpp  ceiling_node.cpp  component_node.cpp  divide_node.cpp  exponent_node.cpp  expression_tree.cpp  expression_tree_iterator.cpp  expression_tree_iterator_impl.cpp  factorial_node.cpp  floor_node.cpp  leaf_node.cpp  modulus_node.cpp  multiply_node.cpp  negate_node.cpp  subtract_node.cpp  (+1 more)
(+3 files in other folders)
